# RVC-Studio

./: .dockerignore  .gitignore  Dockerfile  Home.py  README.md  api.py  config.py  main.py  package.json  pitch_extraction.py  preprocessing_utils.py  pyproject.toml  requirements.txt  rvc_for_realtime.py  training_cli.py  tsconfig.base.json  tts_cli.py  uv-install.bat  uv-start.bat  uvr5_cli.py  vc_infer_pipeline.py  vite.config.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
i18n/: __init__.py
lib/: __init__.py  audio.py  mdx.py  model_utils.py  rmvpe.py  separate.py  separators.py  slicer2.py  utils.py
lib/infer_pack/: attentions.py  commons.py  models.py  models_onnx.py
lib/infer_pack/text/: __init__.py  cleaners.py  symbols.py
lib/karafan/: __init__.py  audio_utils.py  compare.py  inference.py  settings.py  setup.py  sys_info.py  tfc_tdf.py
lib/train/: data_utils.py  process_ckpt.py  utils.py
lib/uvr5_pack/: UVR.py  constants.py  error_handling.py  mdxnet.py  spec_utils.py
lib/uvr5_pack/demucs/: apply.py  filtering.py  hdemucs.py  htdemucs.py  model.py  pretrained.py  repo.py  states.py  transformer.py  utils.py
pages/: 0_RVC_Server.py  1_Inference.py  2_Train.py  3_Text_to_Speech.py  4_Tensorboard.py  6_Playlist.py  7_Realtime_Conversion.py
server/: __init__.py  rvc.py  types.py  utils.py  uvr.py
services/gateway/: package.json
services/gateway/src/: index.ts
services/ml/: README.md  __init__.py  __main__.py  api.py  bootstrap.py  job_runner.py  jobs.py  pitch_extraction.py  preprocessing_utils.py  rvc_for_realtime.py  training.py  training_cli.py  tts_cli.py  uvr5_cli.py  vc_infer_pipeline.py
services/ml/server/: __init__.py  rvc.py  types.py  uvr.py
webui/: __init__.py  api.py  components.py  contexts.py  downloader.py  player.py  recorder.py
